test/library/standard/Sort/errors/sortDomainArray.rect7.good
sortDomainArray.chpl:71: error: unresolved call 'unmanaged domain(1,int(64),one).dsiSorted(DefaultComparator)'
$CHPL_HOME/modules/internal/DefaultAssociative.chpl:nnnn: note: this candidate did not match: DefaultAssociativeDom.dsiSorted(comparator)
$CHPL_HOME/modules/internal/ChapelDomain.chpl:nnnn: note: because method call receiver with type 'unmanaged domain(1,int(64),one)'
$CHPL_HOME/modules/internal/DefaultAssociative.chpl:nnnn: note: is passed to formal 'this: borrowed DefaultAssociativeDom'
sortDomainArray.chpl:71: note: other candidates are:
$CHPL_HOME/modules/internal/DefaultAssociative.chpl:nnnn: note:   DefaultAssociativeArr.dsiSorted(comparator)
